--- a/po/sv.po
+++ b/po/sv.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Daniel Nylander <po@danielnylander.se>, 2026
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-02-22 06:01+0100\n"
-"PO-Revision-Date: 2026-02-22 08:37+0000\n"
+"PO-Revision-Date: 2026-02-21 13:38+0000\n"
+"Last-Translator: Daniel Nylander <po@danielnylander.se>, 2026\n"
 "Language-Team: Swedish (https://app.transifex.com/danielnylander/teams/305130/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,271 +23,279 @@ msgstr ""
 
 #: lugnarummet/export.py:13 lugnarummet/main.py:212 lugnarummet/main.py:612
 msgid "Calming Room"
-msgstr ""
+msgstr "Lugna rummet"
 
 #: lugnarummet/export.py:27 lugnarummet/export.py:78
 msgid "Date"
-msgstr ""
+msgstr "Datum"
 
 #: lugnarummet/export.py:27 lugnarummet/export.py:80
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 #: lugnarummet/export.py:27
 msgid "Duration (min)"
-msgstr ""
+msgstr "Längd (min)"
 
 #: lugnarummet/export.py:27
 msgid "Stress before"
-msgstr ""
+msgstr "Stress före"
 
 #: lugnarummet/export.py:27
 msgid "Stress after"
-msgstr ""
+msgstr "Stress efter"
 
 #: lugnarummet/export.py:68
 msgid "Calming Sessions"
-msgstr ""
+msgstr "Lugnande sessioner"
 
 #: lugnarummet/export.py:82
 msgid "Duration"
-msgstr ""
+msgstr "Längd"
 
 #: lugnarummet/export.py:84
 msgid "Stress"
-msgstr ""
+msgstr "Stress"
 
 #: lugnarummet/export.py:126
 msgid "Export Calming Sessions"
-msgstr ""
+msgstr "Exportera lugnande sessioner"
 
 #: lugnarummet/export.py:127
 msgid "Choose export format:"
-msgstr ""
+msgstr "Välj exportformat:"
 
 #: lugnarummet/export.py:130
 msgid "Cancel"
-msgstr ""
+msgstr "Avbryt"
 
 #: lugnarummet/export.py:131
 msgid "CSV"
-msgstr ""
+msgstr "CSV"
 
 #: lugnarummet/export.py:132
 msgid "JSON"
-msgstr ""
+msgstr "JSON"
 
 #: lugnarummet/export.py:133
 msgid "PDF"
-msgstr ""
+msgstr "PDF"
 
 #: lugnarummet/export.py:154
 msgid "Save Export"
-msgstr ""
+msgstr "Spara export"
 
 #: lugnarummet/export.py:168
 #, python-format
 msgid "Exported %s"
-msgstr ""
+msgstr "Exporterade %s"
 
 #: lugnarummet/export.py:171 lugnarummet/export.py:194
 #, python-format
 msgid "Export error: %s"
-msgstr ""
+msgstr "Exportfel: %s"
 
 #: lugnarummet/export.py:176
 msgid "Save PDF"
-msgstr ""
+msgstr "Spara PDF"
 
 #: lugnarummet/export.py:189
 msgid "PDF exported"
-msgstr ""
+msgstr "PDF exporterad"
 
 #: lugnarummet/export.py:191
 msgid "PDF export requires cairo."
-msgstr ""
+msgstr "PDF-export kräver cairo."
 
 #: lugnarummet/main.py:143
 msgid "Tap to start"
-msgstr ""
+msgstr "Tryck för att börja"
 
 #: lugnarummet/main.py:144
 msgid "Breathe in…"
-msgstr ""
+msgstr "Andas in…"
 
 #: lugnarummet/main.py:145
 msgid "Hold…"
-msgstr ""
+msgstr "Håll andan…"
 
 #: lugnarummet/main.py:146
 msgid "Breathe out…"
-msgstr ""
+msgstr "Andas ut…"
 
 #: lugnarummet/main.py:227
 msgid "Export sessions (Ctrl+E)"
-msgstr ""
+msgstr "Exportera sessioner (Ctrl+E)"
 
 #: lugnarummet/main.py:232
 msgid "Export Sessions"
-msgstr ""
+msgstr "Exportera sessioner"
 
 #: lugnarummet/main.py:233 lugnarummet/main.py:627
 msgid "Preferences"
-msgstr ""
+msgstr "Inställningar"
 
 #: lugnarummet/main.py:234
 msgid "About Calming Room"
-msgstr ""
+msgstr "Om Lugna rummet"
 
 #: lugnarummet/main.py:258
 msgid "Breathe"
-msgstr ""
+msgstr "Andas"
 
 #: lugnarummet/main.py:263
 msgid "Strategies"
-msgstr ""
+msgstr "Strategier"
 
 #: lugnarummet/main.py:268
 msgid "How do I feel?"
-msgstr ""
+msgstr "Hur mår jag?"
 
 #: lugnarummet/main.py:273
 msgid "Music"
-msgstr ""
+msgstr "Musik"
 
 #: lugnarummet/main.py:289
 msgid "Background Music"
-msgstr ""
+msgstr "Bakgrundsmusik"
 
 #: lugnarummet/main.py:293
 msgid "Calming classical music for relaxation"
-msgstr ""
+msgstr "Lugnande klassisk musik för avkoppling"
 
 #: lugnarummet/main.py:310
 msgid "Play / Pause"
-msgstr ""
+msgstr "Spela upp / Paus"
 
 #: lugnarummet/main.py:343
 msgid ""
 "No music files found.\n"
 "Add .mp3 files to ~/.config/lugnarummet/music/"
 msgstr ""
+"Inga musikfiler hittades.\n"
+"Lägg till .mp3-filer till ~/.config/lugnarummet/music/"
 
 #: lugnarummet/main.py:349
 msgid ""
 "Public domain music. Performances by Jerzy Kulik.\n"
 "Source: Internet Archive"
 msgstr ""
+"Fri musik (Public domain). Framföranden av Jerzy Kulik.\n"
+"Källa: Internet Archive"
 
 #: lugnarummet/main.py:384
 msgid "Breathing Exercise"
-msgstr ""
+msgstr "Andningsövning"
 
 #: lugnarummet/main.py:395 lugnarummet/main.py:499
 msgid "Start"
-msgstr ""
+msgstr "Börja"
 
 #: lugnarummet/main.py:401
 msgid "Stop"
-msgstr ""
+msgstr "Sluta"
 
 #: lugnarummet/main.py:409
 #, python-brace-format
 msgid "Breathe in {in_}s · Hold {hold}s · Breathe out {out}s"
-msgstr ""
+msgstr "Andas in {in_}s · Håll andan {hold}s · Andas ut {out}s"
 
 #: lugnarummet/main.py:431
 msgid "🆘 I need help NOW"
-msgstr ""
+msgstr "🆘 Jag behöver hjälp NU"
 
 #: lugnarummet/main.py:458
 msgid "How stressed are you right now?"
-msgstr ""
+msgstr "Hur stressad är du just nu?"
 
 #: lugnarummet/main.py:473
 msgid "Calm"
-msgstr ""
+msgstr "Lugn"
 
 #: lugnarummet/main.py:474
 msgid "Medium"
-msgstr ""
+msgstr "Medel"
 
 #: lugnarummet/main.py:475
 msgid "Overload"
-msgstr ""
+msgstr "För mycket"
 
 #: lugnarummet/main.py:494
 msgid "Running…"
-msgstr ""
+msgstr "Kör…"
 
 #: lugnarummet/main.py:505
 #, python-brace-format
 msgid "Your favorite strategy: {strategy}"
-msgstr ""
+msgstr "Din favoritstrategi: {strategy}"
 
 #: lugnarummet/main.py:507
 msgid "Try this: Take 5 deep breaths. Count each one. You are safe."
-msgstr ""
+msgstr "Prova detta: Ta fem djupa andetag. Räkna varje andetag. Du är trygg."
 
 #: lugnarummet/main.py:510
 msgid "You are safe 💙"
-msgstr ""
+msgstr "Du är säker 💙"
 
 #: lugnarummet/main.py:513
 msgid "Go to breathing"
-msgstr ""
+msgstr "Gå till andning"
 
 #: lugnarummet/main.py:514
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: lugnarummet/main.py:525
 msgid "You are safe. Take a deep breath."
-msgstr ""
+msgstr "Du är säker. Ta ett djupt andetag."
 
 #: lugnarummet/main.py:534
 msgid "You seem calm. Great! Keep doing what you're doing."
-msgstr ""
+msgstr "Du verkar lugn. Bra! Fortsätt med det du gör."
 
 #: lugnarummet/main.py:536
 msgid "Getting a bit tense. Try a short breathing exercise."
-msgstr ""
+msgstr "Det börjar bli lite spänt. Prova en kort andningsövning."
 
 #: lugnarummet/main.py:538
 msgid ""
 "High stress. Take a break now. Try the breathing exercise or one of the "
 "strategies."
 msgstr ""
+"Hög stress. Ta en paus nu. Prova andningsövningen eller någon av "
+"strategierna."
 
 #: lugnarummet/main.py:540
 msgid ""
 "Very high stress. Press the emergency button or go to breathing immediately."
 " You are safe. 💙"
 msgstr ""
+"Mycket hög stress. Tryck på nödknappen eller börja andas omedelbart. Du är "
+"säker. 💙"
 
 #: lugnarummet/main.py:621
 msgid "Sensory regulation and calming strategies for autism and ADHD"
-msgstr ""
+msgstr "Sensorisk reglering och lugnande strategier för autism och ADHD"
 
 #: lugnarummet/main.py:628
 msgid "Breathing"
-msgstr ""
+msgstr "Andning"
 
 #: lugnarummet/main.py:631
 msgid "Breathing Pattern"
-msgstr ""
+msgstr "Andningsmönster"
 
 #: lugnarummet/main.py:633
 msgid "Breathe in (seconds)"
-msgstr ""
+msgstr "Andas in (seconds)"
 
 #: lugnarummet/main.py:638
 msgid "Hold (seconds)"
-msgstr ""
+msgstr "Håll andan (seconds)"
 
 #: lugnarummet/main.py:643
 msgid "Breathe out (seconds)"
-msgstr ""
+msgstr "Andas ut (seconds)"
 
 #: lugnarummet/main.py:668
 msgid "Welcome"
